--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Terence Farmer
 logo: /assets/img/THS-3.jpg
 description: Portfolio
-#show_downloads: false
+show_downloads: false
 theme: jekyll-theme-minimal
