--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Terence Farmer
+title: TERENCE FARMER
 logo: /assets/img/THS-3.jpg
 description: Portfolio
 show_downloads: false
 theme: jekyll-theme-minimal
+baseurl: /terencefarmer.github.io
