--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ show_downloads: false
 theme: jekyll-theme-minimal
 baseurl: "/terencefarmer.github.io"
 alt_logo: "/assets/img/TableauBadge.png"
-github: is_project_page: false
+is_project_page: false
